bk_ida/gccida/c0/qty_compare_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2188:25: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[*( int *)q2p].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2188:42: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[*( int *)q2p].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2188:76: error: use of undeclared identifier 'qty_0'
v4 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[*( int *)q2p].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2189:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2189:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2191:25: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2191:42: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2191:76: error: use of undeclared identifier 'qty_0'
v2 = ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2192:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/local-alloc.c:2192:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare_1/src/obj/local-alloc.o] Error 1
